# advent-of-code-2025

./: Cargo.toml  README.md
src/: args.rs  main.rs  solver.rs  trie.rs  utils.rs
src/day1/: mod.rs
src/day6/: mod.rs
